tests/render/snapshots/render__pretty_print_snapshots__check_with_facts_nested.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(check (with-facts [[:client/opencode] [:via/ssh]]
  (allow "git push")
  (deny "rm /etc/passwd")))
── output ──
(check (with-facts [[:client/opencode] [:via/ssh]]
         (allow "git push")
         (deny "rm /etc/passwd")))
