tests/render/snapshots/render__pretty_print_snapshots__define_arg_style_overrides.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(define-arg-style java (overrides gnu) (separators " " "=" ":"))
── output ──
(define-arg-style java
  (overrides gnu)
  (separators " " "=" ":"))
