tests/render/snapshots/render__pretty_print_snapshots__define_predicate.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(define prod-host (and (fact? :via/ssh) (fact? [:ssh/host (regex "^prod-")])))
── output ──
(define prod-host
  (and (fact? :via/ssh) (fact? [:ssh/host (regex "^prod-")])))
