tests/render/snapshots/render__pretty_print_snapshots__parser_with_many_till.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(parser "find" (style single-dash-long)
  (parameter "exec" (many-till (or ";" "+")))
  (parameter "execdir" (many-till (or ";" "+")))
  (parameter ["name" "type" "size"]))
── output ──
(parser "find"
  (style single-dash-long)
  (parameter "exec" (many-till (or ";" "+")))
  (parameter "execdir" (many-till (or ";" "+")))
  (parameter ["name" "type" "size"]))
