tests/render/snapshots/render__pretty_print_snapshots__parser_with_tail_after_token.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(parser "mise" (style gnu) (flags (until "--")) (rest #cmd))
── output ──
(parser "mise"
  (style gnu)
  (flags (until "--"))
  (rest #cmd))
