tests/render/snapshots/render__pretty_print_snapshots__parser_xargs_with_flags_and_parameters.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(parser "xargs" (style gnu) (parameter ["n" "I" "L" "P" "d"])
  (flag ["0" "r"]) (flags posix) (rest #cmd))
── output ──
(parser "xargs"
  (style gnu)
  (parameter ["n" "I" "L" "P" "d"])
  (flag ["0" "r"])
  (flags posix)
  (rest #cmd))
