tests/render/snapshots/render__pretty_print_snapshots__rule_allow_with_reason.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(rule "ls" (allow "safe ls"))
── output ──
(rule "ls"
  (allow "safe ls"))
