tests/render/snapshots/render__pretty_print_snapshots__rule_exact_form.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(rule "true" (and (exact) (allow)))
── output ──
(rule "true"
  (and (exact) (allow)))
