tests/render/snapshots/render__pretty_print_snapshots__rule_if.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(rule "rm" (if (flag "r") (ask "recursive") (allow)))
── output ──
(rule "rm"
  (if (flag "r")
      (ask "recursive")
    (allow)))
