tests/render/snapshots/render__pretty_print_snapshots__rule_not.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(rule "rm" (and (not (flag "r")) (allow "non-recursive")))
── output ──
(rule "rm"
  (and (not (flag "r")) (allow "non-recursive")))
